-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.3
-
Windows 10 22H2
-
-
d217eca2f (dev), 50a591426 (6.6), 9b32c3478 (tqtc/lts-6.5), 89552f6c4 (dev), 92dd43096 (6.6)
Steps to reproduce
- Load the Shader Effects example (https://doc.qt.io/qt-6/qtquick-shadereffects-example.html )
- Edit shadereffects.qml to add one line, "import QtMultimedia"
- Re-run CMake
- Build the project
Note: After step #2, it is necessary to re-run CMake (or delete the build folder entirely) if the project was previously built. Simply cleaning the project is not enough.
Outcomes
The build fails with the following error:
wasm-ld: error: duplicate symbol: qInitResources_shaders() >>> defined in CMakeFiles/shadereffectsexample.dir/.rcc/qrc_shaders.cpp.o >>> defined in C:/Qt/6.5.3/wasm_multithread/lib/objects-Release/Multimedia_resources_1/.rcc/qrc_shaders.cpp.o wasm-ld: error: duplicate symbol: qCleanupResources_shaders() >>> defined in CMakeFiles/shadereffectsexample.dir/.rcc/qrc_shaders.cpp.o >>> defined in C:/Qt/6.5.3/wasm_multithread/lib/objects-Release/Multimedia_resources_1/.rcc/qrc_shaders.cpp.o
Workaround/Fix
- Users: Pass a name that's not "shaders" to qt6_add_shaders()
- Qt: Pass a name that's not "shaders" to qt_internal_add_shaders() (see https://github.com/qt/qtmultimedia/blob/v6.5.3/src/multimedia/CMakeLists.txt#L285 for example)
| For Gerrit Dashboard: QTBUG-118624 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 516340,2 | Make the resource_name more unique in qt_add_shaders call | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 516342,2 | Avoid resource_name collisions in qt_add_shaders calls | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 516526,2 | Avoid resource_name collisions in qt_add_shaders calls | 6.6 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 516539,2 | Avoid resource_name collisions in qt_add_shaders calls | tqtc/lts-6.5 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |
| 517182,2 | Make the resource_name more unique in qt_add_shaders call | 6.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |