Avoid resource_name collisions in qt_add_shaders calls

It has been pointed out that platforms with static builds can end up
in symbol name clashes when a Qt library and an application uses the
same resource_name in qt_add_shaders or qt_add_resources.

Avoid this by using more unique resource_names for Multimedia's own
qt_add_shaders calls.

Fixes: QTBUG-118624
Change-Id: Ie3cc65abe42be1ae6bc61a6e2951997b4c398b79
Reviewed-by: Lars Knoll <lars@knoll.priv.no>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
(cherry picked from commit d217eca2f065df538ec2cbd275150d9d587fd018)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 50a591426bad1ba6211674c93626bc8b72448ac8)